--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: downcase GHCR_REPO
         run: |
-          echo "GHCR_REPO=ghcr.io/${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+          echo "GHCR_REPO=${{ env.REGISTRY }}/${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -98,7 +98,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: downcase GHCR_REPO
         run: |
-          echo "GHCR_REPO=ghcr.io/${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+          echo "GHCR_REPO=${{ env.REGISTRY }}/${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
